--- a/index.html
+++ b/index.html
@@ -186,6 +186,7 @@
     <div class="callback__modal-wrapper">
 
         <div id="amv_callback_window" class="modal-popup">
+            <button type="button" class="btn btn_close-amw">Закрыть</button>
             <div class="modal-default__title">Закажите обратный звонок
                 <span>наш менеджер свяжется с Вами в ближайшее время</span>
             </div>
@@ -217,8 +218,10 @@
                     <input type="submit" value="Заказать" class="default-form__submit default-form__submit--full">
                 </div>
             </form>
+
         </div>
     </div>
+    <div class="callback__shadow"></div>
 </div>
 
 </body>
